# xenora-website

./: .env  .env.example  .gitignore  404.html  ARCHITECTURE.md  CNAME  README.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy-pages.yml
.lovable/: plan.md
assets/: index-DDTS9RZl.js  index-Dto3NbS6.js  index-DxCx8BiG.css
docs/agents/: content-agent.md  leads-agent.md  research-agent.md
patternloop/: .gitignore  LICENSE  README.md  pyproject.toml
patternloop/.github/workflows/: ci.yml
patternloop/docs/: COMMUNITY.md  JOURNAL.md  RELEASE.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  VISION.md
patternloop/examples/demo_notes/: project_alpha.txt  research_snippets.txt
patternloop/scripts/: run-demo.sh  run-ui.sh
patternloop/src/patternloop/: __init__.py  __main__.py  cli.py  compiler.py  config.py  export.py  inference.py  kernel.py  logging_setup.py  loopspec.py  memory.py  paths.py
patternloop/src/patternloop/bundled/: coder_sidekick.yaml  content_outline.yaml  inbox_zero.yaml  lead_qualifier.yaml  research_digest.yaml
patternloop/src/patternloop/connectors/: __init__.py  claude.py  n8n.py
patternloop/src/patternloop/tools/: __init__.py  registry.py  sandbox.py
patternloop/src/patternloop/ui/: dashboard.py
patternloop/tests/: test_compiler.py  test_kernel_export.py  test_logging.py  test_sandbox.py
scripts/: sync-patternloop-prompts.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: config.toml
vite/: plugin-claude-api.ts
(+178 files in other folders)
